# django-sozluk

./: .dockerignore  .env  .eslintrc  .gitignore  .pre-commit-config.yaml  .pylintrc  .stylelintrc  CHANGELOG  CONTRIBUTORS  Dockerfile  Dockerfile.dev  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  docker.py  entrypoint.sh  manage.py  package.json  pyproject.toml  readme.md  readme.tr.md  requirements-prod.txt  requirements.txt
.gitsecret/keys/: pubring.kbx  pubring.kbx~  trustdb.gpg
.gitsecret/paths/: mapping.cfg
conf/: django.env  nginx.conf
conf/dev/: django.env
conf/prod/: django.env  django.env.secret  postgres.env  postgres.env.secret
dictionary/: __init__.py  admin.py  apps.py  conf.py  deprecated_util.py  forms.py  merge_with_util.py  models.py  sitemaps.py  tasks.py  urls.py  util.py  views.py
dictionary/admin/: __init__.py  announcements.py  author.py  badge.py  category.py  entry.py  flatpages.py  general_report.py  images.py  sites.py  topic.py
dictionary/admin/views/: author.py  novices.py  sites.py  topic.py
dictionary/backends/: session_backend.py
dictionary/backends/sessions/: cached_db.py  db.py  utils.py
dictionary/forms/: auth.py  edit.py
dictionary/management/commands/: __init__.py  cleanup_expired.py  cleanup_images.py  commit_user_terminations.py  create_generic_superuser.py  spam.py  (+5 more)
dictionary/middleware/: csrf.py  frontend.py  users.py
dictionary/migrations/: 0001_initial.py  0002_author_unique_author_lower_email.py
dictionary/models/: __init__.py  announcements.py  author.py  category.py  entry.py  flatpages.py  images.py  m2m.py  messaging.py  reporting.py  topic.py
dictionary/signals/: __init__.py  m2m.py  messaging.py
dictionary/social/: adapters.py  urls.py  views.py
dictionary/static/: djdict.js  style.css
dictionary/templates/: 403_csrf.html  404.html  500.html  activity.html  base.html  category_list.html  entry_list.html  entry_update.html  index.html  people.html  topic_list.html  user_preferences.html  user_preferences_base.html  user_preferences_email.html  user_preferences_password.html  user_profile.html
dictionary/templatetags/: basic_filters.py  filters.py  functions.py  global_objects.py
dictionary/tests/: test_model_managers.py  test_models.py
dictionary/urls/: __init__.py  announcements.py  auth.py  edit.py  json.py  list.py  user.py
dictionary/utils/: __init__.py  admin.py  context_processors.py  db.py  decorators.py  email.py  managers.py  mixins.py  serializers.py  settings.py  validators.py  views.py
dictionary/views/: announcements.py  auth.py  deprecation.py  detail.py  edit.py  images.py  json.py  list.py  reporting.py
dictionary_graph/: apps.py  autocomplete.py  images.py  readme.md  schema.py  types.py  urls.py  utils.py
dictionary_graph/autocomplete/: __init__.py  author.py  topic.py
dictionary_graph/category/: __init__.py  action.py
dictionary_graph/entry/: __init__.py  action.py  edit.py  list.py
dictionary_graph/messaging/: __init__.py  action.py  compose.py
dictionary_graph/topic/: __init__.py  action.py  list.py
dictionary_graph/user/: __init__.py  action.py
djdict/: celery.py  settings.py  settings_prod.py  urls.py  wsgi.py
docker/: Dockerfile  Dockerfile.dev  docker-compose.dev.yml  docker-compose.yml
docker/dev/: common.yml  dev.Dockerfile  dev.Dockerfile.dockerignore  docker-compose.yml
docker/nginx/: Dockerfile
docker/prod/: docker-compose.yml
docker/scripts/: entrypoint.dev.sh  setup.sh
docs/turkish/: deployment.md  installation.md  javascript.md  readme.md  security.md  settings.md  translation.md
nginx/: Dockerfile  nginx.conf
screenshots/: readme.md
scripts/: entrypoint.dev.sh  entrypoint.sh  setup.sh
(+140 files in other folders)
