[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-sozluk"
version = "1.5.0"
dependencies = [
    "Django ~= 4.2",
    "django-uuslug ~= 2.0",
    "django-widget-tweaks~=1.5",
    "graphene-django~=3.1",
    "python-dateutil~=2.8",
    "user-agents~=2.2",
    "Pillow~=10.0",
    "celery~=5.3",
    "django-celery-email~=3.0",
    "psycopg[c]~=3.1",
    "django-redis~=5.4",
    "gunicorn~=21.2"
]

[tool.black]
line-length = 120

[tool.ruff]
fix = true
fixable = ["I", "F401"]
show-fixes = true
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
    "RUF", # Ruff-specific
    "C4", # flake8-comprehensions
    "C90", # mccabe
    "I", # isort
]
line-length = 120
exclude = ["migrations"]
ignore = ["B904", "RUF001", "RUF012","RUF003", "RUF005", "B905"]

[tool.ruff.isort]
combine-as-imports = true
section-order = [
    "future",
    "standard-library",
    "django",
    "rest_framework",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.isort.sections]
django = ["django"]
rest_framework = ["rest_framework"]

[tool.ruff.mccabe]
max-complexity = 20
