[project]
name = "django-sozluk"
version = "1.7.0"
requires-python = "==3.12.*"
dependencies = [
    "Django ~= 4.2",
    "django-uuslug ~= 2.0",
    "django-widget-tweaks~=1.5",
    "graphene-django~=3.2",
    "python-dateutil~=2.9",
    "user-agents~=2.2",
    "Pillow~=10.4",
    "celery~=5.4",
    "django-celery-email~=3.0",
    "psycopg[c]~=3.2",
    "django-redis~=5.4",
    "gunicorn~=23.0",
    "sentry-sdk~=2.16",
]

[tool.ruff]
fix = true
show-fixes = true
target-version = "py312"
line-length = 120
exclude = ["migrations"]

[tool.ruff.lint]
fixable = ["I"]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
    "RUF", # Ruff-specific
    "C4", # flake8-comprehensions
    "C90", # mccabe
    "I", # isort
]
ignore = ["B904", "RUF001", "RUF012","RUF003", "RUF005", "B905"]

[tool.ruff.lint.isort]
combine-as-imports = true
section-order = [
    "future",
    "standard-library",
    "django",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.isort.sections]
django = ["django"]

[tool.ruff.lint.mccabe]
max-complexity = 20
